Add lint:fix task

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "scripts": {
     "lint": "eslint --ext .js ./",
+    "lint:fix": "eslint --ext .js --fix ./",
     "start": "node ./index.js"
   },
   "main": "index.js"
