--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "eslint-plugin-node": "^5.0.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1"
+    "karma": "^1.7.0",
+    "karma-mocha": "^1.3.0",
     "mocha": "^3.4.2",
   },
   "scripts": {
