--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "eslint-plugin-standard": "^3.0.1"
     "karma": "^1.7.0",
     "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.4",
     "mocha": "^3.4.2",
+    "phantomjs-prebuilt": "^2.1.14",
   },
   "scripts": {
     "lint": "eslint --ext .js ./",
