--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "karma": "^1.7.0",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
+    "karma-webpack": "^2.0.3",
     "mocha": "^3.4.2",
     "phantomjs-prebuilt": "^2.1.14",
+    "webpack": "^3.0.0"
   },
   "scripts": {
     "lint": "eslint --ext .js ./",
