--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "express": "^4.15.3"
   },
   "devDependencies": {
+    "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
+    "babel-preset-env": "^1.5.2",
+    "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.0.2",
     "eslint": "^4.0.0",
     "eslint-config-standard": "^10.2.1",
