--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "chai": "^4.0.2",
     "eslint": "^4.0.0",
     "eslint-config-standard": "^10.2.1",
+    "eslint-loader": "^1.8.0",
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-node": "^5.0.0",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-plugin-standard": "^3.0.1",
     "karma": "^1.7.0",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
