--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-webpack": "^2.0.3",
     "mocha": "^3.4.2",
+    "nightwatch": "^0.9.16",
     "phantomjs-prebuilt": "^2.1.14",
     "webpack": "^3.0.0"
   },
