--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-env": "^1.5.2",
     "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.0.2",
+    "chromedriver": "^2.30.1",
     "eslint": "^4.0.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.8.0",
@@ -37,6 +38,7 @@
     "mocha": "^3.4.2",
     "nightwatch": "^0.9.16",
     "phantomjs-prebuilt": "^2.1.14",
+    "selenium-server": "^3.4.0",
     "webpack": "^3.0.0"
   },
   "scripts": {
