Add server-side e2e task using mocha

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "lint": "eslint --ext .js ./",
     "lint:fix": "eslint --ext .js --fix ./",
     "test": "npm run test:unit && npm run test:e2e",
+    "test:server:unit": "mocha ./test/server/unit/**/*.js",
     "test:client:e2e": "nightwatch --env chrome --config test/client/e2e/nightwatch.conf.js",
     "test:client:unit": "karma start ./test/client/unit/karma.conf.js --single-run",
     "start": "node ./src/server/index.js"
