Update test task to run server unit, and client unit and e2e tests

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   "scripts": {
     "lint": "eslint --ext .js ./",
     "lint:fix": "eslint --ext .js --fix ./",
-    "test": "npm run test:unit && npm run test:e2e",
+    "test": "npm run test:server:unit && npm run test:client:unit && npm run test:client:e2e",
     "test:server:unit": "mocha ./test/server/unit/**/*.js",
     "test:client:e2e": "nightwatch --env chrome --config test/client/e2e/nightwatch.conf.js",
     "test:client:unit": "karma start ./test/client/unit/karma.conf.js --single-run",
