--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "basic-express-server",
-  "description": "basic-express-server",
   "version": "0.2.0",
   "homepage": "https://github.com/thegreatsunra/basic-express-server",
+  "name": "complex-express-server",
+  "description": "complex-express-server",
+  "homepage": "https://github.com/thegreatsunra/complex-express-server",
   "repository": {
     "type": "git",
-    "url": "https://github.com/thegreatsunra/basic-express-server.git"
+    "url": "https://github.com/thegreatsunra/complex-express-server.git"
   },
   "author": "Dane Petersen <thegreatsunra@gmail.com>",
   "license": "MIT",
