Change required engines for node and npm

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "author": "Dane Petersen <thegreatsunra@gmail.com>",
   "license": "MIT",
   "engines": {
-    "node": "^7.0.0",
-    "npm": "^4.0.0"
+    "node": ">= 8.1.0",
+    "npm": ">= 5.0.3"
   },
   "dependencies": {
     "express": "^4.15.3"
