Add test aliases

--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "lint": "eslint --ext .js ./",
     "lint:fix": "eslint --ext .js --fix ./",
     "test": "npm run test:server:unit && npm run test:client:unit && npm run test:client:e2e",
-    "test:server:unit": "mocha ./test/server/unit/**/*.js",
     "test:client:e2e": "testcafe chrome ./test/client/e2e/specs",
     "test:client:unit": "karma start ./test/client/unit/karma.conf.js --single-run",
+    "test:e2e": "npm run test:client:e2e",
+    "test:server:unit": "mocha ./test/server/unit/**/*.js",
+    "test:unit": "npm run test:server:unit && npm run test:client:unit",
     "start": "node ./src/server/index.js"
   },
   "main": "./src/server/index.js"
