Replace karma, mocha, phantomjs with jest
Add file and style mocks to make jest play nicely with webpack

--- a/package.json
+++ b/package.json
@@ -30,12 +30,7 @@
     "eslint-plugin-node": "^5.0.0",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
-    "karma": "^1.7.0",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "karma-webpack": "^2.0.3",
-    "mocha": "^3.4.2",
-    "phantomjs-prebuilt": "^2.1.14",
+    "jest": "^20.0.4",
     "testcafe": "^0.16.2",
     "webpack": "^3.0.0"
   },
@@ -44,9 +39,9 @@
     "lint:fix": "eslint --ext .js --fix ./",
     "test": "npm run test:server:unit && npm run test:client:unit && npm run test:client:e2e",
     "test:client:e2e": "testcafe chrome ./test/client/e2e/specs",
-    "test:client:unit": "karma start ./test/client/unit/karma.conf.js --single-run",
+    "test:client:unit": "jest ./test/client/unit/specs",
     "test:e2e": "npm run test:client:e2e",
-    "test:server:unit": "mocha ./test/server/unit/**/*.js",
+    "test:server:unit": "jest ./test/server/unit/specs",
     "test:unit": "npm run test:server:unit && npm run test:client:unit",
     "start": "node ./src/server/index.js"
   },
